[gd_scene load_steps=22 format=3 uid="uid://cxcwkhnssnixn"]

[ext_resource type="Script" path="res://Menus/main/main_menu.gd" id="1_0nven"]
[ext_resource type="Texture2D" uid="uid://buv2spj5woguc" path="res://assets/maxes asprite stuff (ignore this)/clounds.png" id="2_amsfi"]
[ext_resource type="Texture2D" uid="uid://hlnhwgqibhyu" path="res://assets/maxes asprite stuff (ignore this)/start screen 2.png" id="2_e514p"]
[ext_resource type="PackedScene" uid="uid://drntx8rv725jw" path="res://Menus/difficulty/choose difficulty.tscn" id="3_wxxkv"]
[ext_resource type="Script" path="res://Menus/main/options.gd" id="5_lnxom"]
[ext_resource type="Script" path="res://Menus/button.gd" id="9_l24vw"]
[ext_resource type="Script" path="res://Menus/main/Quit_frfrog.gd" id="10_waw4t"]
[ext_resource type="Script" path="res://Menus/main/menuController.gd" id="16_1wkwv"]
[ext_resource type="PackedScene" uid="uid://bt4v2legy23xl" path="res://Menus/option/options.tscn" id="17_uur6x"]

[sub_resource type="Animation" id="Animation_adegy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("clouds:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 179)]
}

[sub_resource type="Animation" id="Animation_3d2s3"]
resource_name = "clouds"
length = 200.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("clouds:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 200),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(32, 194), Vector2(2455, 194)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sa2mc"]
_data = {
"RESET": SubResource("Animation_adegy"),
"clouds": SubResource("Animation_3d2s3")
}

[sub_resource type="Animation" id="Animation_bn6oo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4qkb4"]
resource_name = "chooseDifficulty"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1152, 0)]
}

[sub_resource type="Animation" id="Animation_hfxqp"]
resource_name = "chooseDifficulty_To_Main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l7qvy"]
resource_name = "credit->main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0c3oo"]
resource_name = "credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -648)]
}

[sub_resource type="Animation" id="Animation_nmb14"]
resource_name = "options"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1152, 0)]
}

[sub_resource type="Animation" id="Animation_ry5bx"]
resource_name = "optionsBack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1152, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pe2xk"]
_data = {
"RESET": SubResource("Animation_bn6oo"),
"chooseDifficulty": SubResource("Animation_4qkb4"),
"chooseDifficulty_To_Main": SubResource("Animation_hfxqp"),
"credit->main": SubResource("Animation_l7qvy"),
"credits": SubResource("Animation_0c3oo"),
"options": SubResource("Animation_nmb14"),
"optionsBack": SubResource("Animation_ry5bx")
}

[sub_resource type="LabelSettings" id="LabelSettings_0qy2q"]
font_size = 50
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="Main menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_0nven")

[node name="clouds" type="Sprite2D" parent="."]
position = Vector2(32, 179)
texture = ExtResource("2_amsfi")

[node name="backround" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(596, 299)
scale = Vector2(1.9, 1.9)
texture = ExtResource("2_e514p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sa2mc")
}
autoplay = "clouds"

[node name="master" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="master" groups=["guiAni"]]
libraries = {
"": SubResource("AnimationLibrary_pe2xk")
}
script = ExtResource("16_1wkwv")

[node name="home" type="Control" parent="master"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BoxContainer" type="BoxContainer" parent="master/home"]
layout_mode = 2
offset_left = 427.0
offset_top = 236.0
offset_right = 730.0
offset_bottom = 387.0
vertical = true

[node name="Start" type="Button" parent="master/home/BoxContainer"]
layout_mode = 2
text = "Start run"
script = ExtResource("9_l24vw")

[node name="options" type="Button" parent="master/home/BoxContainer"]
layout_mode = 2
text = "Options"
script = ExtResource("5_lnxom")

[node name="credits" type="Button" parent="master/home/BoxContainer"]
layout_mode = 2
text = "Credits"
script = ExtResource("9_l24vw")

[node name="Quit" type="Button" parent="master/home/BoxContainer"]
layout_mode = 2
text = "Quit
"
script = ExtResource("10_waw4t")

[node name="Label" type="Label" parent="master/home"]
layout_mode = 2
offset_right = 1153.0
offset_bottom = 174.0
text = "Recycled Cybernetics"
label_settings = SubResource("LabelSettings_0qy2q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="credits" type="Control" parent="master"]
anchors_preset = 0
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 1296.0

[node name="Panel" type="Panel" parent="master/credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="credit->main" type="Button" parent="master/credits/Panel"]
layout_mode = 2
offset_left = 497.0
offset_top = 30.0
offset_right = 655.0
offset_bottom = 60.0
text = "Back"
script = ExtResource("9_l24vw")

[node name="RichTextLabel" type="RichTextLabel" parent="master/credits/Panel"]
layout_mode = 2
offset_left = 167.0
offset_top = 83.0
offset_right = 985.0
offset_bottom = 618.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 2
text = "Credits
----------------
Main programmer: Asa Kramer

Main artist: Max Hurley

----------------
SFX:
All SFX was found on Pixabay.com

By Pixabay:  \"Sword sound 2\", \"Forest wind and birds\", \"RUNNING 1\", \"Swish Sound\", \"Metronome\", \"Gooey Squish\", \"Knife Stab Sound Effect\", \"COUCH HIT AND SWISH_44100\", \"energy hum\", \"Simple Zaps\", \"Knife throw 2\", \"running in grass\", \"Sword Hit\", \"Sword Slash with a Designed Impact\", \"gear-spinning-loop\", and \"Locker Slam 1\"

Not by Pixabay:
- \"Robot Heavy Mechanical Footsteps\" by DavidDumaisAudio

- \"Metal Whoosh Hit 10\" by floraphonic

- \"Metal Hit 94\" by floraphonic

- \"Tap Notification\" by lucadialessandro

 -\"Mouse Click\" by SoundReality

----------------
Music:
- ”Digital Duel - Electronic fight song” by Montogoronto
- ”Street Fight” by DSTechnician

----------------
Shader(s):
- ”VHS and CRT monitor effect” by pend00

----------------
All links:
-https://pixabay.com/sound-effects/sword-sound-2-36274/
-https://pixabay.com/sound-effects/forest-wind-and-birds-6881/
-https://pixabay.com/sound-effects/running-1-6846/
-https://pixabay.com/sound-effects/swish-sound-94707/
-https://pixabay.com/sound-effects/metronome-85688/
-https://pixabay.com/sound-effects/gooey-squish-14820/
-https://pixabay.com/sound-effects/knife-stab-sound-effect-36354/
-https://pixabay.com/sound-effects/robot-heavy-mechanical-footsteps-194039/
-https://pixabay.com/sound-effects/metal-whoosh-hit-10-202176/
-https://pixabay.com/sound-effects/metal-hit-94-200422/
-https://pixabay.com/sound-effects/couch-hit-and-swish-44100-38612/
-https://pixabay.com/sound-effects/energy-hum-29083/
-https://pixabay.com/sound-effects/simple-zaps-48107/
-https://pixabay.com/sound-effects/knife-throw-2-88028/
-https://pixabay.com/sound-effects/running-in-grass-6237/
-https://pixabay.com/sound-effects/sword-hit-7160/
-https://pixabay.com/sound-effects/sword-slash-with-a-designed-impact-185434/
-https://pixabay.com/sound-effects/tap-notification-180637/
-https://pixabay.com/sound-effects/mouse-click-153941/
-https://pixabay.com/sound-effects/gear-spinning-loop-6981/
-https://pixabay.com/sound-effects/locker-slam-1-101485/
-https://pixabay.com/music/video-games-digital-duel-electronic-fight-song-198050/
-https://pixabay.com/music/electro-street-fight-115554/
-https://godotshaders.com/shader/vhs-and-crt-monitor-effect/"
selection_enabled = true

[node name="options" parent="master" node_paths=PackedStringArray("optionsBack") instance=ExtResource("17_uur6x")]
offset_left = -1152.0
offset_right = 0.0
optionsBack = NodePath("../AnimationPlayer")

[node name="ChooseDifficulty" parent="master" node_paths=PackedStringArray("chooseDifficulty_To_Main") instance=ExtResource("3_wxxkv")]
offset_left = 1152.0
offset_right = 2304.0
chooseDifficulty_To_Main = NodePath("../AnimationPlayer")

[connection signal="draw" from="master/home/BoxContainer/Start" to="master/home/BoxContainer/Start" method="_on_draw"]
[connection signal="pressed" from="master/home/BoxContainer/Start" to="master/AnimationPlayer" method="_on_start_pressed"]
[connection signal="draw" from="master/home/BoxContainer/options" to="master/home/BoxContainer/options" method="_on_draw"]
[connection signal="pressed" from="master/home/BoxContainer/options" to="master/AnimationPlayer" method="_on_options_pressed"]
[connection signal="pressed" from="master/home/BoxContainer/options" to="master/home/BoxContainer/options" method="_on_pressed"]
[connection signal="draw" from="master/home/BoxContainer/credits" to="master/home/BoxContainer/credits" method="_on_draw"]
[connection signal="pressed" from="master/home/BoxContainer/credits" to="master/AnimationPlayer" method="_on_credits_pressed"]
[connection signal="draw" from="master/home/BoxContainer/Quit" to="master/home/BoxContainer/Quit" method="_on_draw"]
[connection signal="pressed" from="master/home/BoxContainer/Quit" to="master/home/BoxContainer/Quit" method="_on_pressed"]
[connection signal="pressed" from="master/credits/Panel/credit->main" to="master/AnimationPlayer" method="_on_creditmain_pressed"]
